// Copyright 2015 Google Inc. All rights Reserved.
//
// Author: derenl@google.com
//
// bird.proto
//
// Play ground for learning protobuf
//

syntax = "proto3";

package bird;

message Feed{

  int32 seq = 1; // id
  string food_name = 2;

}

message Feedback{

  int32 seq = 1; // id
  string comment = 2; // say something about the food
  string echo_food_name = 3; // return the received food name
}
